--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A roaring lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A roaring lion" title="Hear me roar!">
   </body>
 </html>
